--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -1,22 +1,73 @@
-version: '3'
+# version: '2.4'
+# services:
+#   kafka:
+#     image: bitnami/kafka:3.1.0
+#     container_name: kafka
+#     command:
+#       - 'sh'
+#       - '-c'
+#       - '/opt/bitnami/scripts/kafka/setup.sh && kafka-storage.sh format --config "$${KAFKA_CONF_FILE}" --cluster-id "lkorDA4qT6W1K_dk0LHvtg" --ignore-formatted  && /opt/bitnami/scripts/kafka/run.sh' # Kraft specific initialise
+#     environment:
+#       - ALLOW_PLAINTEXT_LISTENER=yes
+#       # Start Kraft Setup (Kafka as Controller - no Zookeeper)
+#       - KAFKA_CFG_NODE_ID=1
+#       - KAFKA_CFG_BROKER_ID=1
+#       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
+#       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+#       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+#       - KAFKA_CFG_LOG_DIRS=/tmp/logs
+#       - KAFKA_CFG_PROCESS_ROLES=broker,controller
+#       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:9094
+#       # End Kraft Specific Setup
+#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092,INTERNAL://kafka:9094
+#     ports:
+#       - "0.0.0.0:9092:9092"
 
+#   kafka-ui:
+#     image: provectuslabs/kafka-ui
+#     container_name: kafka-ui
+#     ports:
+#       - "8080:8080"
+#     restart: "always"
+#     environment:
+#       KAFKA_CLUSTERS_0_NAME: "lkorDA4qT6W1K_dk0LHvtg"
+#       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
+#     depends_on:
+#       - kafka
+
+version: '2.4'
 services:
-  zookeeper:
-    image: wurstmeister/zookeeper
-    container_name: zookeeper
-    ports:
-      - "2181:2181"
   kafka:
-    image: wurstmeister/kafka
+    image: bitnami/kafka:3.1.0
     container_name: kafka
-    ports:
-      - "9092:9092"
+    command:
+      - 'sh'
+      - '-c'
+      - '/opt/bitnami/scripts/kafka/setup.sh && kafka-storage.sh format --config "$${KAFKA_CONF_FILE}" --cluster-id "lkorDA4qT6W1K_dk0LHvtg" --ignore-formatted  && /opt/bitnami/scripts/kafka/run.sh' # Kraft specific initialise
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-  init-kafka:
-    image: confluentinc/cp-kafka:6.1.1
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      # Start Kraft Setup (Kafka as Controller - no Zookeeper)
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_BROKER_ID=1
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_LOG_DIRS=/tmp/logs
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:9094
+      # End Kraft Specific Setup
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092,INTERNAL://kafka:9094
+    ports:
+      - "0.0.0.0:9092:9092"
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    restart: "always"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: "trackingGPS"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
     depends_on:
       - kafka
-    entrypoint: [ '/bin/sh', '-c' ]
-    command: "kafka-topics --bootstrap-server kafka:29092 --create --if-not-exists --topic trackingGPS --replication-factor 1 --partitions 1"
