--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -1,42 +1,6 @@
-# version: '2.4'
-# services:
-#   kafka:
-#     image: bitnami/kafka:3.1.0
-#     container_name: kafka
-#     command:
-#       - 'sh'
-#       - '-c'
-#       - '/opt/bitnami/scripts/kafka/setup.sh && kafka-storage.sh format --config "$${KAFKA_CONF_FILE}" --cluster-id "lkorDA4qT6W1K_dk0LHvtg" --ignore-formatted  && /opt/bitnami/scripts/kafka/run.sh' # Kraft specific initialise
-#     environment:
-#       - ALLOW_PLAINTEXT_LISTENER=yes
-#       # Start Kraft Setup (Kafka as Controller - no Zookeeper)
-#       - KAFKA_CFG_NODE_ID=1
-#       - KAFKA_CFG_BROKER_ID=1
-#       - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@127.0.0.1:9093
-#       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT
-#       - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-#       - KAFKA_CFG_LOG_DIRS=/tmp/logs
-#       - KAFKA_CFG_PROCESS_ROLES=broker,controller
-#       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,INTERNAL://:9094
-#       # End Kraft Specific Setup
-#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092,INTERNAL://kafka:9094
-#     ports:
-#       - "0.0.0.0:9092:9092"
-
-#   kafka-ui:
-#     image: provectuslabs/kafka-ui
-#     container_name: kafka-ui
-#     ports:
-#       - "8080:8080"
-#     restart: "always"
-#     environment:
-#       KAFKA_CLUSTERS_0_NAME: "lkorDA4qT6W1K_dk0LHvtg"
-#       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
-#     depends_on:
-#       - kafka
-
 version: '2.4'
 services:
+
   kafka:
     image: bitnami/kafka:3.1.0
     container_name: kafka
@@ -60,14 +24,48 @@ services:
     ports:
       - "0.0.0.0:9092:9092"
 
-  kafka-ui:
-    image: provectuslabs/kafka-ui
-    container_name: kafka-ui
-    ports:
-      - "8080:8080"
-    restart: "always"
+  # kafka-ui:
+  #   image: provectuslabs/kafka-ui
+  #   container_name: kafka-ui
+  #   ports:
+  #     - "8080:8080"
+  #   restart: "always"
+  #   environment:
+  #     KAFKA_CLUSTERS_0_NAME: "trackingGPS"
+  #     KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
+  #   depends_on:
+  #     - kafka
+
+  db:
+    image: mysql:latest
+    container_name: database
+    restart: always
     environment:
-      KAFKA_CLUSTERS_0_NAME: "trackingGPS"
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
-    depends_on:
-      - kafka
+      MYSQL_DATABASE: trackingGPS
+      MYSQL_USER: cytech
+      MYSQL_PASSWORD: CYTECH24
+      MYSQL_ROOT_PASSWORD: CYTECH24
+    volumes:
+      - db_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - app-network
+    ports:
+      - '3306:3306'
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: always
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: CYTECH24
+    ports:
+      - '8081:80'
+    networks:
+      - app-network
+networks:
+  app-network:
+    driver: bridge
+volumes:
+  db_data:
