--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "@angular/router": "^17.0.0",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "leaflet": "^1.9.4",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
+    "socket.io-client": "^4.7.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
