--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,19 +25,19 @@ services:
     networks:
       - app-network
 
-  # kafka-ui:
-  #   image: provectuslabs/kafka-ui
-  #   container_name: kafka-ui
-  #   ports:
-  #     - "8080:8080"
-  #   restart: "always"
-  #   environment:
-  #     KAFKA_CLUSTERS_0_NAME: "trackingGPS"
-  #     KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
-  #   depends_on:
-  #     - kafka
-  #   networks:
-  #     - app-network
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    ports:
+      - "8080:8080"
+    restart: "always"
+    environment:
+      KAFKA_CLUSTERS_0_NAME: "trackingGPS"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9094
+    depends_on:
+      - kafka
+    networks:
+      - app-network
 
   db:
     image: mysql:latest
@@ -56,17 +56,18 @@ services:
     ports:
       - '3306:3306'
 
-  # phpmyadmin:
-  #   image: phpmyadmin/phpmyadmin:latest
-  #   container_name: phpmyadmin
-  #   restart: always
-  #   environment:
-  #     PMA_HOST: db
-  #     MYSQL_ROOT_PASSWORD: CYTECH24
-  #   ports:
-  #     - '8081:80'
-  #   networks:
-  #     - app-network
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin:latest
+    container_name: phpmyadmin
+    restart: always
+    environment:
+      PMA_HOST: db
+      MYSQL_ROOT_PASSWORD: CYTECH24
+    ports:
+      - '8081:80'
+    networks:
+      - app-network
 
 
 
@@ -84,7 +85,6 @@ services:
 
 
 
-# run command line to start server.py that is a fastapi server
   fastapi:
     image: python:3.11
     container_name: fastapi
@@ -96,7 +96,7 @@ services:
       - ./:/app
     ports:
       - 8000:8000
-    command: bash -c "pip install -r requirements.txt && cd kafka && python main.py"
+    command: bash -c "pip install -r requirements.txt && cd kafka && python api.py && python consumer.py"
     networks:
       - app-network
 
