run consumer.py

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,15 +90,27 @@ services:
     container_name: fastapi
     depends_on:
       - kafka
-      # - db
     working_dir: /app
     volumes:
       - ./:/app
     ports:
       - 8000:8000
-    command: bash -c "pip install -r requirements.txt && cd kafka && python api.py && python consumer.py"
+    command: bash -c "pip install -r requirements.txt && cd kafka && python api.py"
     networks:
       - app-network
+
+
+  python:
+    image: python:3.11
+    container_name: python
+    working_dir: /app
+    volumes:
+      - ./:/app
+    command: bash -c "pip install -r requirements.txt && cd kafka && python consumer.py"
+    networks:
+      - app-network
+
+
 
 networks:
   app-network:
